@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.843 2007-10-05 16:55:50 castaglia Exp $
+$Id: NEWS,v 1.844 2007-10-05 17:00:50 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -17,6 +17,8 @@ CVS
 - Bug 2969 - Allow APPE after REST.
 - Bug 2983 - Use getgrouplist(3) for group lookup, if available.  This may
   potentially speed up the group membership lookup on some systems.
+- Bug 2984 - mod_auth_file uid2name() does not cache results causing slow LIST
+  response.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
